# build_system_conversion

./: ProjectConfig.h.in
bazel/less-487/: BUILD  WORKSPACE  ncurses.BUILD
cmake/less-487/: ProjectConfig.h.in  less.h
cmake/readline-7.0/: CMakeLists.txt  FindTERMCAP.cmake  config.h.in  helpers.cmake
cmake/screen-4.6.1/: CMakeLists.txt
cmake/tmux-2.5/: CMakeLists.txt  tmux.h
cmake/tmux-2.5/cmake/modules/: FindUTEMPTER.cmake
gzip-1.8/: CMakeLists.txt
gzip-1.8/lib/: CMakeLists.txt
less-487/: CMakeLists.txt
tmux-2.5/: CMakeLists.txt
tmux-2.5/cmake/modules/: FindLibEvent.cmake
